add createtopic api
